        ======= plasma release 0.2.0 (v0_2_0) on Linux (cde-tx32-lc210) =======

        ======= plasma release 0.2.0 (v0_2_0) on Linux (cde-tx32-lc210) =======


2004-07-22  Brian Kahne  <bkahne@ibmoto.com>

	* The plasma wrapper script now hardcodes in the compiler so that
	you don't need to have a compiler policy.

        ======= plasma release 0.1.0 (v0_1_0) on Linux (cde-tx32-lc210) =======

        ======= plasma release 0.1.0 (v0_1_0) on Linux (cde-tx32-lc210) =======

2004-07-19  Brian Kahne  <bkahne@ibmoto.com>

	* Added line directives to the original methods for pMutex
	classes.  This should allow the user to place breakpoints within
	these methods and have gdb work correctly.

	* Further fixes to the plasma wrapper:  Added the ability to just
	link with it, using the required libraries.  This happens if we
	don't find a .pa file or there isn't a --plasma or --p option.

	* Added a --devel option, which takes the top src directory as
	a parameter.  This switches over to the devel mode, where include
	and library paths are set for an uninstalled development sandbox,
	rather than for an installation.  This means that the prefix is
	not used.  Modified the regression suite to use the wrapper script.

	* Found a bug:  I couldn't use the "waiter" queue, as previously
	implemented, b/c when we have an alt block and are using ResChans,
	it means that we might have a situation where a single thread (the
	alt-block containing thread) might be waiting on multiple items to
	finish (all of the ResChan objects).  This doesn't work b/c the
	Queue class only allows an object to be in a single list at any
	given time- otherwise bad things can happen.  Fixed this by
	changing the _waiters member to a gc'd vector class.

2004-07-15  Brian Kahne  <bkahne@ibmoto.com>

	* Plasma should now be useable by others when installed.  I
	created "plasma", which is a wrapper program that invokes the main
	executable (plasma-comp).  This massages parameters into the