@@ -2,7 +2,7 @@
 AC_INIT(src/Interface.C)
 
 PLASMA_MAJOR_VERSION=0
-PLASMA_MINOR_VERSION=2
+PLASMA_MINOR_VERSION=3
 PLASMA_MICRO_VERSION=0
 PLASMA_VERSION=$PLASMA_MAJOR_VERSION.$PLASMA_MINOR_VERSION.$PLASMA_MICRO_VERSION
 
