@@ -1,7 +1,11 @@
-        ======= plasma release 0.2.0 (v0_2_0) on Linux (cde-tx32-lc210) =======
+
+2004-07-22  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Imported libgc6.3.
 
         ======= plasma release 0.2.0 (v0_2_0) on Linux (cde-tx32-lc210) =======
 
+        ======= plasma release 0.2.0 (v0_2_0) on Linux (cde-tx32-lc210) =======
 
 2004-07-22  Brian Kahne  <bkahne@ibmoto.com>
 
